--- a/src/Blog/views/article-page.html.twig
+++ b/src/Blog/views/article-page.html.twig
@@ -4,8 +4,8 @@
 
     <div class="row">
         <div class="columns">
-            <h2>{{ article.getTitle() }}</h2>
-            <p>{{ article.getContent() }}</p>
+            <h2>{{ article.article_title }}</h2>
+            <p>{{ article.article_description }}</p>
         </div>
     </div>
 
